Update Activation Heatmaps with keras model.ipynb

--- a/Activation Heatmaps with keras model.ipynb
+++ b/Activation Heatmaps with keras model.ipynb
@@ -391,7 +391,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Below, we wil</h3>\n",
+    "<h3>Below, we will</h3>\n",
     "<ol>\n",
     "    <li>Load Image with CV2  </li>\n",
     "    <li>Resize the heatmap  </li>\n",
